[package]
name = "httpie"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1" # handle error
clap = "3.0.0-beta.4" # parse command line args
colored = "2" # terminal beautiful display
jsonxf = "1.1" # JSON pretty print
mime = "0.3" # handle MIME
reqwest = { version = "0.11", features = ["json"] } # http client
tokio = { version = "1", features = ["full"] } # async
syntect = "4.4"
